--- a/doc/latex/group__auxiliary_functions.tex
+++ b/doc/latex/group__auxiliary_functions.tex
@@ -14,37 +14,13 @@
 \mbox{\hyperlink{group__auxiliary_functions_gab53bde930eb12adf7c84b549b7a4e241}{get\+\_\+device}} ()
 \begin{DoxyCompactList}\small\item\em Give device from mount folder input. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_ga08542b578002f8342cd3e0a5252b5543}{test\+\_\+cdrecord}} ()
-\begin{DoxyCompactList}\small\item\em Test whether {\bfseries{cdrecord}} is functional. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{group__auxiliary_functions_ga37ccab4be14da0e5c11e2e176e48f36a}{burn\+\_\+iso}} ()
-\begin{DoxyCompactList}\small\item\em Burn Gentoo clonezilla installer to D\+VD using {\bfseries{cdrecord}}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Test whether {\bfseries{cdrecord}} is functional. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{group__auxiliary_functions_ga37ccab4be14da0e5c11e2e176e48f36a}\label{group__auxiliary_functions_ga37ccab4be14da0e5c11e2e176e48f36a}} 
-\index{Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}!burn\_iso@{burn\_iso}}
-\index{burn\_iso@{burn\_iso}!Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}}
-\doxysubsubsection{\texorpdfstring{burn\_iso()}{burn\_iso()}}
-{\footnotesize\ttfamily burn\+\_\+iso (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
-
-
-
-Burn Gentoo clonezilla installer to D\+VD using {\bfseries{cdrecord}}. 
-
-\begin{DoxyNote}{Note}
-{\bfseries{cdrecord}} should have been installed beforehand 
-\end{DoxyNote}
-
-\begin{DoxyRetVals}{Return values}
-{\em Return} & {\bfseries{cdrecord}} return code \\
-\hline
-\end{DoxyRetVals}
-
-
-Definition at line 127 of file utils.\+sh.
-
 \mbox{\Hypertarget{group__auxiliary_functions_ga913689f9801eab383c4187327367e870}\label{group__auxiliary_functions_ga913689f9801eab383c4187327367e870}} 
 \index{Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}!check\_md5sum@{check\_md5sum}}
 \index{check\_md5sum@{check\_md5sum}!Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}}
@@ -81,7 +57,7 @@ Give device from mount folder input.
 
 
 
-Definition at line 84 of file utils.\+sh.
+Definition at line 81 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gaa35d741a19132f1ec7a0a699640e6b5a}\label{group__auxiliary_functions_gaa35d741a19132f1ec7a0a699640e6b5a}} 
 \index{Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}!get\_mountpoint@{get\_mountpoint}}
@@ -95,7 +71,7 @@ Gives mount folder from device label input.
 
 
 
-Definition at line 70 of file utils.\+sh.
+Definition at line 66 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga3684c6e188b7eb9eec7fbe851ab7e660}\label{group__auxiliary_functions_ga3684c6e188b7eb9eec7fbe851ab7e660}} 
 \index{Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}!is\_block\_device@{is\_block\_device}}
@@ -119,7 +95,7 @@ Test if argument is non-\/loop block device.
 \end{DoxyRetVals}
 
 
-Definition at line 60 of file utils.\+sh.
+Definition at line 56 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga25a80837ae3373590d59e5d558c1ab83}\label{group__auxiliary_functions_ga25a80837ae3373590d59e5d558c1ab83}} 
 \index{Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}!list\_block\_devices@{list\_block\_devices}}
@@ -133,7 +109,7 @@ List all non-\/loop block devices.
 
 
 
-Definition at line 50 of file utils.\+sh.
+Definition at line 46 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga08542b578002f8342cd3e0a5252b5543}\label{group__auxiliary_functions_ga08542b578002f8342cd3e0a5252b5543}} 
 \index{Auxiliary functions to check files, devices and burn disk.@{Auxiliary functions to check files, devices and burn disk.}!test\_cdrecord@{test\_cdrecord}}
@@ -160,5 +136,5 @@ In such an event, either run script with elevated rights or modify {\bfseries{cd
 \end{DoxyRetVals}
 
 
-Definition at line 110 of file utils.\+sh.
+Definition at line 104 of file utils.\+sh.
 
