--- a/doc/latex/mkvm__chroot_8sh.tex
+++ b/doc/latex/mkvm__chroot_8sh.tex
@@ -18,6 +18,11 @@ Creating Gentoo filesystem in virtual disk.
 \item 
 \mbox{\hyperlink{mkvm__chroot_8sh_a9caaa1f5ea6177e55f13ebe7dec2bd60}{finalize}} ()
 \end{DoxyCompactItemize}
+\doxysubsection*{Variables}
+\begin{DoxyCompactItemize}
+\item 
+Integer \mbox{\hyperlink{mkvm__chroot_8sh_a8847834db624db79ff5b3abf5222e106}{res}} = 0
+\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -43,5 +48,18 @@ This file is included into the clonezilla I\+SO live\+CD, then copied to the roo
 
 
 
-Definition at line 355 of file mkvm\+\_\+chroot.\+sh.
+Definition at line 325 of file mkvm\+\_\+chroot.\+sh.
+
+
+
+\doxysubsection{Variable Documentation}
+\mbox{\Hypertarget{mkvm__chroot_8sh_a8847834db624db79ff5b3abf5222e106}\label{mkvm__chroot_8sh_a8847834db624db79ff5b3abf5222e106}} 
+\index{mkvm\_chroot.sh@{mkvm\_chroot.sh}!res@{res}}
+\index{res@{res}!mkvm\_chroot.sh@{mkvm\_chroot.sh}}
+\doxysubsubsection{\texorpdfstring{res}{res}}
+{\footnotesize\ttfamily Integer res = 0}
+
+
+
+Definition at line 338 of file mkvm\+\_\+chroot.\+sh.
 
