--- a/doc/latex/utils_8sh.tex
+++ b/doc/latex/utils_8sh.tex
@@ -19,11 +19,7 @@ Auxiliary functions.
 \mbox{\hyperlink{group__auxiliary_functions_gab53bde930eb12adf7c84b549b7a4e241}{get\+\_\+device}} ()
 \begin{DoxyCompactList}\small\item\em Give device from mount folder input. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_ga08542b578002f8342cd3e0a5252b5543}{test\+\_\+cdrecord}} ()
-\begin{DoxyCompactList}\small\item\em Test whether {\bfseries{cdrecord}} is functional. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{group__auxiliary_functions_ga37ccab4be14da0e5c11e2e176e48f36a}{burn\+\_\+iso}} ()
-\begin{DoxyCompactList}\small\item\em Burn Gentoo clonezilla installer to D\+VD using {\bfseries{cdrecord}}. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{group__create_installer_ga532879314181eb08a603971d9ac2b2f3}{create\+\_\+install\+\_\+usb\+\_\+device}} ()
-\begin{DoxyCompactList}\small\item\em Create U\+S\+B-\/stick (or any external device) Gentoo clonezilla installer. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Test whether {\bfseries{cdrecord}} is functional. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
