--- a/doc/man/man3/mkvm_chroot.sh.3
+++ b/doc/man/man3/mkvm_chroot.sh.3
@@ -1,4 +1,4 @@
-.TH "mkvm_chroot.sh" 3 "Thu Oct 1 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
+.TH "mkvm_chroot.sh" 3 "Sun Oct 4 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -24,6 +24,13 @@ mkvm_chroot.sh \- Creating Gentoo filesystem in virtual disk\&.
 .br
 .ti -1c
 .RI "\fBfinalize\fP ()"
+.br
+.in -1c
+.SS "Variables"
+
+.in +1c
+.ti -1c
+.RI "Integer \fBres\fP = 0"
 .br
 .in -1c
 .SH "Detailed Description"
@@ -55,7 +62,13 @@ Definition in file \fBmkvm_chroot\&.sh\fP\&.
 .SS "finalize ()"
 
 .PP
-Definition at line 355 of file mkvm_chroot\&.sh\&.
+Definition at line 325 of file mkvm_chroot\&.sh\&.
+.SH "Variable Documentation"
+.PP 
+.SS "Integer res = 0"
+
+.PP
+Definition at line 338 of file mkvm_chroot\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for gentoo-creator from the source code\&.
