--- a/doc/latex/fetch__clonezilla__iso_8sh.tex
+++ b/doc/latex/fetch__clonezilla__iso_8sh.tex
@@ -3,5 +3,23 @@
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\hyperlink{group__create_installer_gae1918429f97793a7d5ff449988d57ebd}{fetch\+\_\+clonezilla\+\_\+iso}} ()
-\begin{DoxyCompactList}\small\item\em Download clonezilla I\+SO file and process it. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\mbox{\hyperlink{group__create_installer_ga7ac10e6398a73f00ab13b37123541934}{get\+\_\+gentoo\+\_\+install\+\_\+iso}} ()
+\begin{DoxyCompactList}\small\item\em Download minimal Gentoo install I\+SO file and caches. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\doxysubsection*{Variables}
+\begin{DoxyCompactItemize}
+\item 
+Exported String \mbox{\hyperlink{fetch__clonezilla__iso_8sh_a060afc2d4febc5e904b82d131fbc8f3e}{L\+I\+V\+E\+CD}} = \$\{\mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}}\}
+\end{DoxyCompactItemize}
+
+
+\doxysubsection{Variable Documentation}
+\mbox{\Hypertarget{fetch__clonezilla__iso_8sh_a060afc2d4febc5e904b82d131fbc8f3e}\label{fetch__clonezilla__iso_8sh_a060afc2d4febc5e904b82d131fbc8f3e}} 
+\index{fetch\_clonezilla\_iso.sh@{fetch\_clonezilla\_iso.sh}!LIVECD@{LIVECD}}
+\index{LIVECD@{LIVECD}!fetch\_clonezilla\_iso.sh@{fetch\_clonezilla\_iso.sh}}
+\doxysubsubsection{\texorpdfstring{LIVECD}{LIVECD}}
+{\footnotesize\ttfamily Exported String L\+I\+V\+E\+CD = \$\{\mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}}\}}
+
+
+
+Definition at line 29 of file fetch\+\_\+clonezilla\+\_\+iso.\+sh.
+
