--- a/doc/latex/mkgentoo_8sh.tex
+++ b/doc/latex/mkgentoo_8sh.tex
@@ -16,7 +16,7 @@ Process options, create Gentoo Virtual\+Box machine and optionally create clonez
 \begin{DoxyCompactList}\small\item\em Check commanline coherence and incompatibilities. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga3cd1eb7159583a231db413e892df7f01}{help\+\_\+md}} ()
 \begin{DoxyCompactList}\small\item\em Print usage in markdown format. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{group__create_installer_ga91482c4db18186b33acbaf1528a50ddc}{help}} ()
+\mbox{\hyperlink{group__create_installer_ga34f49d33f396400becb2b774e0e35c61}{help\+\_\+}} ()
 \begin{DoxyCompactList}\small\item\em Print usage to stdout. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga747eb6a6a3e3fce1becde116190e868f}{fetch\+\_\+livecd}} ()
 \begin{DoxyCompactList}\small\item\em Downloads Gentoo install CD. \end{DoxyCompactList}\item 
@@ -33,7 +33,7 @@ Process options, create Gentoo Virtual\+Box machine and optionally create clonez
 \mbox{\hyperlink{group__create_installer_ga9cdb7f95380fd3520d58d31a1cd12f0d}{clonezilla\+\_\+to\+\_\+iso}} (iso, dir)
 \begin{DoxyCompactList}\small\item\em Create Gentoo linux clonezilla I\+SO installer out of a clonezilla directory structure and an clonezilla image. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_gac1f727409fd593a27f5e4df3270aab31}{process\+\_\+clonezilla\+\_\+iso}} ()
-\begin{DoxyCompactList}\small\item\em Download clonezilla I\+SO or recover it from cache calling \mbox{\hyperlink{group__create_installer_gae1918429f97793a7d5ff449988d57ebd}{fetch\+\_\+clonezilla\+\_\+iso}}. ~\newline
+\begin{DoxyCompactList}\small\item\em Download clonezilla I\+SO or recover it from cache calling \#fetch\+\_\+clonezilla\+\_\+iso. ~\newline
 Upgrade it with virtualbox guest additions. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__create_installer_ga4775daa2c57227bcbee9ac38d5e37b9b}{build\+\_\+virtualbox}} ()
 \begin{DoxyCompactList}\small\item\em Build Virtual\+Box from source using an unsquashed clonezilla CD as a chrooted environment. \end{DoxyCompactList}\item 
@@ -66,8 +66,12 @@ Read\+Only String Array \mbox{\hyperlink{group__create_installer_ga2b36d9209dbee
 \begin{DoxyCompactList}\small\item\em global string array of switches and default values \end{DoxyCompactList}\item 
 Read\+Only Integer \mbox{\hyperlink{group__create_installer_ga9ef029d8966e03b88fd195a68853c184}{A\+R\+R\+A\+Y\+\_\+\+L\+E\+N\+G\+TH}} = \$((\$\{\#\mbox{\hyperlink{group__create_installer_ga2b36d9209dbee6df3e60d878f3e51005}{A\+RR}}\mbox{[}$\ast$\mbox{]}\}/3))
 \begin{DoxyCompactList}\small\item\em Number of switches (true length of array divided by 3) \end{DoxyCompactList}\item 
-Read\+Only String \mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}} = \char`\"{}downloaded.\+iso\char`\"{}
+Exported String \mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}} = \char`\"{}downloaded.\+iso\char`\"{}
 \begin{DoxyCompactList}\small\item\em Name of downloaded clonezilla I\+SO file. \end{DoxyCompactList}\item 
+Exported String \mbox{\hyperlink{mkgentoo_8sh_a4e842c2e4759e4c8489890e57e8e33bf}{I\+S\+O\+\_\+\+O\+U\+T\+P\+UT}} = \$(sed -\/E \textquotesingle{}s/.$\ast$\textbackslash{}b(\textbackslash{}w+\textbackslash{}.(iso$\vert$\mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}}))\textbackslash{}b.$\ast$\$/\textbackslash{}1/\textquotesingle{} $<$$<$$<$ \char`\"{}\$\{C\+LI\}\char`\"{})
+\item 
+Exported String \mbox{\hyperlink{mkgentoo_8sh_a7e7a3b0c3b3b454c1546882093442181}{C\+R\+E\+A\+T\+E\+\_\+\+I\+SO}} = true
+\item 
 Exported String \mbox{\hyperlink{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}{P\+A\+TH}} = \$\{P\+A\+TH\}\+:\$\{V\+B\+P\+A\+TH\}
 \end{DoxyCompactItemize}
 
@@ -89,7 +93,7 @@ This file is not included into the clonezilla I\+SO live\+CD.
 \begin{DoxyCode}{0}
 \DoxyCodeLine{mkgentoo  [[\textcolor{keywordflow}{switch}=argument]...]  filename.iso  [1]}
 \DoxyCodeLine{mkgentoo  [[\textcolor{keywordflow}{switch}=argument]...]                [2]}
-\DoxyCodeLine{mkgentoo  \mbox{\hyperlink{group__create_installer_ga91482c4db18186b33acbaf1528a50ddc}{help}}[=md]                             [3]}
+\DoxyCodeLine{mkgentoo  help[=md]                             [3]}
 \end{DoxyCode}
  
 \end{DoxyParagraph}
@@ -102,7 +106,7 @@ Usage \mbox{[}3\mbox{]} prints this help, in markdown form if argument \textquot
 \begin{DoxyParagraph}{}
 Run\+:
 \begin{DoxyCode}{0}
-\DoxyCodeLine{mkgentoo \mbox{\hyperlink{group__create_installer_ga91482c4db18186b33acbaf1528a50ddc}{help}} }
+\DoxyCodeLine{mkgentoo help }
 \end{DoxyCode}
  to print a list of possible switches and arguments. 
 \end{DoxyParagraph}
@@ -125,6 +129,26 @@ you should have at least 55 GB of free disk space in the current directory or in
 
 
 \doxysubsection{Variable Documentation}
+\mbox{\Hypertarget{mkgentoo_8sh_a7e7a3b0c3b3b454c1546882093442181}\label{mkgentoo_8sh_a7e7a3b0c3b3b454c1546882093442181}} 
+\index{mkgentoo.sh@{mkgentoo.sh}!CREATE\_ISO@{CREATE\_ISO}}
+\index{CREATE\_ISO@{CREATE\_ISO}!mkgentoo.sh@{mkgentoo.sh}}
+\doxysubsubsection{\texorpdfstring{CREATE\_ISO}{CREATE\_ISO}}
+{\footnotesize\ttfamily Exported String C\+R\+E\+A\+T\+E\+\_\+\+I\+SO = true}
+
+
+
+Definition at line 202 of file mkgentoo.\+sh.
+
+\mbox{\Hypertarget{mkgentoo_8sh_a4e842c2e4759e4c8489890e57e8e33bf}\label{mkgentoo_8sh_a4e842c2e4759e4c8489890e57e8e33bf}} 
+\index{mkgentoo.sh@{mkgentoo.sh}!ISO\_OUTPUT@{ISO\_OUTPUT}}
+\index{ISO\_OUTPUT@{ISO\_OUTPUT}!mkgentoo.sh@{mkgentoo.sh}}
+\doxysubsubsection{\texorpdfstring{ISO\_OUTPUT}{ISO\_OUTPUT}}
+{\footnotesize\ttfamily Exported String I\+S\+O\+\_\+\+O\+U\+T\+P\+UT = \$(sed -\/E \textquotesingle{}s/.$\ast$\textbackslash{}b(\textbackslash{}w+\textbackslash{}.(iso$\vert$\mbox{\hyperlink{group__create_installer_ga86cf981e617fa62d9780236ea2756256}{I\+SO}}))\textbackslash{}b.$\ast$\$/\textbackslash{}1/\textquotesingle{} $<$$<$$<$ \char`\"{}\$\{C\+LI\}\char`\"{})}
+
+
+
+Definition at line 198 of file mkgentoo.\+sh.
+
 \mbox{\Hypertarget{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}\label{mkgentoo_8sh_ad1451b50408769582d8f5bd4254fe7b1}} 
 \index{mkgentoo.sh@{mkgentoo.sh}!PATH@{PATH}}
 \index{PATH@{PATH}!mkgentoo.sh@{mkgentoo.sh}}
@@ -133,5 +157,5 @@ you should have at least 55 GB of free disk space in the current directory or in
 
 
 
-Definition at line 643 of file mkgentoo.\+sh.
+Definition at line 657 of file mkgentoo.\+sh.
 
