--- a/doc/man/man3/createInstaller.3
+++ b/doc/man/man3/createInstaller.3
@@ -1,4 +1,4 @@
-.TH "createInstaller" 3 "Thu Oct 1 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
+.TH "createInstaller" 3 "Sun Oct 4 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -10,9 +10,9 @@ createInstaller
 
 .in +1c
 .ti -1c
-.RI "\fBfetch_clonezilla_iso\fP ()"
+.RI "\fBget_gentoo_install_iso\fP ()"
 .br
-.RI "Download clonezilla ISO file and process it\&. "
+.RI "Download minimal Gentoo install ISO file and caches\&. "
 .ti -1c
 .RI "\fBtest_cli_pre\fP ()"
 .br
@@ -30,7 +30,7 @@ createInstaller
 .br
 .RI "Print usage in markdown format\&. "
 .ti -1c
-.RI "\fBhelp\fP ()"
+.RI "\fBhelp_\fP ()"
 .br
 .RI "Print usage to stdout\&. "
 .ti -1c
@@ -64,7 +64,7 @@ createInstaller
 .ti -1c
 .RI "\fBprocess_clonezilla_iso\fP ()"
 .br
-.RI "Download clonezilla ISO or recover it from cache calling \fBfetch_clonezilla_iso\fP\&. 
+.RI "Download clonezilla ISO or recover it from cache calling #fetch_clonezilla_iso\&. 
 .br
 Upgrade it with virtualbox guest additions\&. "
 .ti -1c
@@ -111,10 +111,6 @@ Upgrade it with virtualbox guest additions\&. "
 .RI "\fBmain\fP ()"
 .br
 .RI "Main function launching routines\&. "
-.ti -1c
-.RI "\fBcreate_install_usb_device\fP ()"
-.br
-.RI "Create USB-stick (or any external device) Gentoo clonezilla installer\&. "
 .in -1c
 .SS "Variables"
 
@@ -132,7 +128,7 @@ Upgrade it with virtualbox guest additions\&. "
 .br
 .RI "Number of switches (true length of array divided by 3) "
 .ti -1c
-.RI "ReadOnly String \fBISO\fP = 'downloaded\&.iso'"
+.RI "Exported String \fBISO\fP = 'downloaded\&.iso'"
 .br
 .RI "Name of downloaded clonezilla ISO file\&. "
 .in -1c
@@ -155,13 +151,13 @@ This is only needed to reduce disk space requirements and avoid a temporary RAW 
 .PP
 
 .PP
-Definition at line 760 of file mkgentoo\&.sh\&.
+Definition at line 843 of file mkgentoo\&.sh\&.
 .SS "cleanup ()"
 
 .PP
 Clean up all temporary files and directpries (except for VirtualBox build) 
 .PP
-Definition at line 1012 of file mkgentoo\&.sh\&.
+Definition at line 1078 of file mkgentoo\&.sh\&.
 .SS "clone_vm_to_device ()"
 
 .PP
@@ -186,7 +182,7 @@ build_virtualbox=true
 .PP
 
 .PP
-Definition at line 822 of file mkgentoo\&.sh\&.
+Definition at line 904 of file mkgentoo\&.sh\&.
 .SS "clone_vm_to_raw ()"
 
 .PP
@@ -199,7 +195,7 @@ VBoxManage clonemedium
 .PP
  to clone VDI to RAW file before bare-metal copy to device\&. 
 .PP
-Definition at line 849 of file mkgentoo\&.sh\&.
+Definition at line 927 of file mkgentoo\&.sh\&.
 .SS "clonezilla_device_to_image ()"
 
 .PP
@@ -212,7 +208,7 @@ Create CloneZilla xz-compressed image out of an external block device (like a US
 .PP
 
 .PP
-Definition at line 885 of file mkgentoo\&.sh\&.
+Definition at line 962 of file mkgentoo\&.sh\&.
 .SS "clonezilla_to_iso (iso, dir)"
 
 .PP
@@ -232,20 +228,7 @@ ISO can be burned to DVD or used to create a bootable USB stick using dd on *nix
 .PP
 
 .PP
-Definition at line 681 of file mkgentoo\&.sh\&.
-.SS "create_install_usb_device ()"
-
-.PP
-Create USB-stick (or any external device) Gentoo clonezilla installer\&. 
-.PP
-\fBWarning\fP
-.RS 4
-Use with care, check your USB_DEVICE variable\&. 
-.RE
-.PP
-
-.PP
-Definition at line 154 of file utils\&.sh\&.
+Definition at line 765 of file mkgentoo\&.sh\&.
 .SS "create_iso_vm ()"
 
 .PP
@@ -269,7 +252,7 @@ the \fBsharedfolder\fP command may fail vith older version of VirtualBox or not 
 .PP
 
 .PP
-Definition at line 785 of file mkgentoo\&.sh\&.
+Definition at line 868 of file mkgentoo\&.sh\&.
 .SS "create_usb_system ()"
 
 .PP
@@ -284,7 +267,7 @@ Clone VDI virtual disk to external device (like a USB stick) Two options are ava
 .PP
 
 .PP
-Definition at line 979 of file mkgentoo\&.sh\&.
+Definition at line 1052 of file mkgentoo\&.sh\&.
 .SS "create_vm ()"
 
 .PP
@@ -308,7 +291,7 @@ Find a way to only compact on success and never on failure of VM\&.
 .PP
 
 .PP
-Definition at line 642 of file mkgentoo\&.sh\&.
+Definition at line 656 of file mkgentoo\&.sh\&.
 .SS "dd_to_usb ()"
 
 .PP
@@ -321,7 +304,7 @@ Used only if vbox-img (patched version) has not been built\&.
 .PP
 
 .PP
-Definition at line 858 of file mkgentoo\&.sh\&.
+Definition at line 936 of file mkgentoo\&.sh\&.
 .SS "delete_vm (vm, ext)"
 
 .PP
@@ -349,40 +332,7 @@ Deletes its folder structure and hard drive (default is 'vdi' as a second argume
 .PP
 
 .PP
-Definition at line 587 of file mkgentoo\&.sh\&.
-.SS "fetch_clonezilla_iso ()"
-
-.PP
-Download clonezilla ISO file and process it\&. 
-.PD 0
-
-.IP "\(bu" 2
-Download iff \fBDOWNLOAD_CLONEZILLA\fP has value 'true' 
-.IP "\(bu" 2
-Optionnally checks MD5 sum\&. 
-.IP "\(bu" 2
-Caches ISO download for later uses\&. 
-.IP "\(bu" 2
-Uncaches it if no fresh download\&. 
-.IP "\(bu" 2
-Mount ISO download\&. Copy ro mounted filesystem to rw directory\&. 
-.IP "\(bu" 2
-Unsquash ISO filesystem\&.squashfs\&. 
-.IP "\(bu" 2
-Copy clonezilla config file\&. 
-.IP "\(bu" 2
-Copy resolv\&.conf to unsquashed filesystem\&. 
-.PP
-\fBReturn values\fP
-.RS 4
-\fI0\fP on success or exits -1 on failure\&. 
-.RE
-.PP
-
-.PP
-
-.PP
-Definition at line 17 of file fetch_clonezilla_iso\&.sh\&.
+Definition at line 597 of file mkgentoo\&.sh\&.
 .SS "fetch_livecd ()"
 
 .PP
@@ -395,7 +345,7 @@ Downloads Gentoo install CD\&. Caches it as ${ISO}
 .PP
 
 .PP
-Definition at line 329 of file mkgentoo\&.sh\&.
+Definition at line 323 of file mkgentoo\&.sh\&.
 .SS "fetch_stage3 ()"
 
 .PP
@@ -408,31 +358,44 @@ Downloads a fresh stage3 Gentoo archive\&. Caches it as ${STAGE3}
 .PP
 
 .PP
-Definition at line 388 of file mkgentoo\&.sh\&.
+Definition at line 366 of file mkgentoo\&.sh\&.
 .SS "generate_Gentoo ()"
 
 .PP
 Launch routines: fetch install IO, starge3 archive, create VM\&. 
 .PP
-Definition at line 1036 of file mkgentoo\&.sh\&.
-.SS "help ()"
+Definition at line 1095 of file mkgentoo\&.sh\&.
+.SS "get_gentoo_install_iso ()"
+
+.PP
+Download minimal Gentoo install ISO file and caches\&. Optionaly checks MD5SUMS\&. 
+.PP
+Definition at line 8 of file fetch_clonezilla_iso\&.sh\&.
+.SS "help_ ()"
 
 .PP
 Print usage to stdout\&. 
 .PP
-Definition at line 319 of file mkgentoo\&.sh\&.
+Definition at line 313 of file mkgentoo\&.sh\&.
 .SS "help_md ()"
 
 .PP
 Print usage in markdown format\&. 
 .PP
-Definition at line 286 of file mkgentoo\&.sh\&.
+Definition at line 280 of file mkgentoo\&.sh\&.
 .SS "main ()"
 
 .PP
 Main function launching routines\&. 
 .PP
-Definition at line 1062 of file mkgentoo\&.sh\&.
+\fBTodo\fP
+.RS 4
+Daemonize the part below generate_Gentoo when #VMPTYPE is \fCheadless\fP so that the script can be detached completely with \fCnohup mkgentoo \&.\&.\&. &\fP 
+.RE
+.PP
+
+.PP
+Definition at line 1123 of file mkgentoo\&.sh\&.
 .SS "make_boot_from_livecd ()"
 
 .PP
@@ -457,11 +420,11 @@ Will be run in the ${VM} virtual machine
 .PP
 
 .PP
-Definition at line 443 of file mkgentoo\&.sh\&.
+Definition at line 417 of file mkgentoo\&.sh\&.
 .SS "process_clonezilla_iso ()"
 
 .PP
-Download clonezilla ISO or recover it from cache calling \fBfetch_clonezilla_iso\fP\&. 
+Download clonezilla ISO or recover it from cache calling #fetch_clonezilla_iso\&. 
 .br
 Upgrade it with virtualbox guest additions\&. Chroot into the clonezilla Ubuntu GNU/Linux distribution and runs apt to build kernel modules and install the VirtualBox guest additions ISO image\&. 
 .br
@@ -474,7 +437,7 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 .PP
 
 .PP
-Definition at line 712 of file mkgentoo\&.sh\&.
+Definition at line 796 of file mkgentoo\&.sh\&.
 .SS "test_cli (cli)"
 
 .PP
@@ -489,7 +452,7 @@ Create globals of the form VAR=arg when there is var=arg on commandline
 .br
 Otherwise assign default values VAR=defaults (3rd argument in array ARR) 
 .PP
-Definition at line 233 of file mkgentoo\&.sh\&.
+Definition at line 218 of file mkgentoo\&.sh\&.
 .SS "test_cli_post ()"
 
 .PP
@@ -502,7 +465,7 @@ Check commanline coherence and incompatibilities\&.
 .PP
 
 .PP
-Definition at line 263 of file mkgentoo\&.sh\&.
+Definition at line 245 of file mkgentoo\&.sh\&.
 .SS "test_cli_pre ()"
 
 .PP
@@ -515,7 +478,7 @@ Check VirtualBox version and prepare commandline analysis\&.
 .PP
 
 .PP
-Definition at line 144 of file mkgentoo\&.sh\&.
+Definition at line 154 of file mkgentoo\&.sh\&.
 .SS "test_vm_running (vm)"
 
 .PP
@@ -533,7 +496,7 @@ Checks if VM as first named argument exists and is running\&.
 .PP
 
 .PP
-Definition at line 555 of file mkgentoo\&.sh\&.
+Definition at line 554 of file mkgentoo\&.sh\&.
 .SS "vbox_img_works ()"
 
 .PP
@@ -548,7 +511,7 @@ Test if \fBvbox-img\fP is functional\&. \fBvbox-img\fP is a script; it refers to
 .PP
 
 .PP
-Definition at line 954 of file mkgentoo\&.sh\&.
+Definition at line 1026 of file mkgentoo\&.sh\&.
 .SH "Variable Documentation"
 .PP 
 .SS "ARR"
@@ -561,15 +524,22 @@ global string array of switches and default values Structure is as follows:
 
 .fi
 .PP
- A double-entry arry will be simulated using indexes\&. 
+ A double-entry arry will be simulated using indexes\&.
 .PP
-Definition at line 78 of file mkgentoo\&.sh\&.
+\fBNote\fP
+.RS 4
+\fCdebug_mode\fP should be place up front in the array 
+.RE
+.PP
+
+.PP
+Definition at line 79 of file mkgentoo\&.sh\&.
 .SS "ARRAY_LENGTH = $((${#\fBARR\fP[*]}/3))"
 
 .PP
 Number of switches (true length of array divided by 3) 
 .PP
-Definition at line 131 of file mkgentoo\&.sh\&.
+Definition at line 141 of file mkgentoo\&.sh\&.
 .SS "CLI = '$*'"
 
 .PP
@@ -581,7 +551,7 @@ Definition at line 69 of file mkgentoo\&.sh\&.
 .PP
 Name of downloaded clonezilla ISO file\&. 
 .PP
-Definition at line 137 of file mkgentoo\&.sh\&.
+Definition at line 147 of file mkgentoo\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for gentoo-creator from the source code\&.
