--- a/doc/man/man3/fetch_clonezilla_iso.sh.3
+++ b/doc/man/man3/fetch_clonezilla_iso.sh.3
@@ -1,4 +1,4 @@
-.TH "fetch_clonezilla_iso.sh" 3 "Thu Oct 1 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
+.TH "fetch_clonezilla_iso.sh" 3 "Sun Oct 4 2020" "Version 1.0" "gentoo-creator" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -10,10 +10,23 @@ fetch_clonezilla_iso.sh
 
 .in +1c
 .ti -1c
-.RI "\fBfetch_clonezilla_iso\fP ()"
+.RI "\fBget_gentoo_install_iso\fP ()"
 .br
-.RI "Download clonezilla ISO file and process it\&. "
+.RI "Download minimal Gentoo install ISO file and caches\&. "
 .in -1c
+.SS "Variables"
+
+.in +1c
+.ti -1c
+.RI "Exported String \fBLIVECD\fP = ${\fBISO\fP}"
+.br
+.in -1c
+.SH "Variable Documentation"
+.PP 
+.SS "Exported String LIVECD = ${\fBISO\fP}"
+
+.PP
+Definition at line 29 of file fetch_clonezilla_iso\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for gentoo-creator from the source code\&.
